# conan2-demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  conan_cmd.txt  conanfile.py  vscode-cmake-tools-build.sh
cmake/: conan_provider.cmake  utils.cmake
hello_package/: CMakeLists.txt  conanfile.py
hello_package/include/: hello.h  world.h
hello_package/src/: hello.cpp  world.cpp
hello_package/test_package/: CMakeLists.txt  conanfile.py
profiles/: arm  riscv
src/: demo.c  main.cpp
test/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  Reverse.cpp  Reverse.h  unit_tests.cpp
