cmake_minimum_required(VERSION 3.22.5)

project(Conan2Demo LANGUAGES CXX C)

include(cmake/utils.cmake)

# set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(main src/main.cpp)
target_link_libraries(main PRIVATE ${fmt_LIBRARIES} ${ZLIB_LIBRARIES})

add_library(demo SHARED src/demo.c)
set(DEMO_VERSION_MAJOR 1)
set(DEMO_VERSION_MINOR 2)
set(DEMO_VERSION_PATCH 3)
set(DEMO_VERSION
    ${DEMO_VERSION_MAJOR}.${DEMO_VERSION_MINOR}.${DEMO_VERSION_PATCH})
set_target_properties(demo PROPERTIES VERSION ${DEMO_VERSION}
    SOVERSION ${DEMO_VERSION_MAJOR})
